@@ -15,7 +15,7 @@ LAM - Readme
 
   https://www.ldap-account-manager.org/
 
-    Copyright (C) 2003 - 2018 Roland Gruber <post@rolandgruber.de>
+    Copyright (C) 2003 - 2019 Roland Gruber <post@rolandgruber.de>
 
   Installation and documentation:
     Please see the LAM manual in docs/manual/index.html.
