@@ -16,7 +16,7 @@
   <para><ulink
   url="https://www.ldap-account-manager.org/">https://www.ldap-account-manager.org/</ulink></para>
 
-  <para>Copyright (C) 2003 - 2018 Roland Gruber
+  <para>Copyright (C) 2003 - 2019 Roland Gruber
   &lt;post@rolandgruber.de&gt;</para>
 
   <para><emphasis role="bold">Key features:</emphasis></para>
